--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3344 - Lab 1</title>
 </head>
-<h1>Welcome to My Website<h1>
+<h1>Welcome to My Website</h1>
     <ul>
         <li>Reading</li>
         <li>Travelling</li>
